--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,7 +124,17 @@ input::-webkit-inner-spin-button {
   justify-content: space-evenly;
 }
 
-.button:hover {
+.button:disabled {
+  border: 1px solid #ffffff;
+  color: #666666;
+  cursor: auto;
+}
+
+.button:disabled .ethereum__icon {
+  fill: #666666;
+}
+
+.button:hover:enabled {
   outline: 0.5px solid black;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
@@ -133,6 +143,7 @@ input::-webkit-inner-spin-button {
 
 .ethereum__icon {
   height: 20px;
+  fill: #000000;
 }
 
 .loader {
@@ -146,6 +157,40 @@ input::-webkit-inner-spin-button {
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
   margin-bottom: 82px;
+}
+
+.connect__metamask {
+  position: absolute;
+  z-index: 999;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 250px;
+  height: 50px;
+  border-radius: 5px;
+  text-align: center;
+  background: linear-gradient(to right, #0660bb, #114fcc, #134be4);
+  width: 50%;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+  font-size: 30px;
+  cursor: pointer;
+  font-family: 'Ubuntu', sans-serif;
+  box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  -webkit-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -moz-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -ms-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  transition: all 400ms ease-in-out;
+}
+
+.connect__metamask:hover:enabled {
+  -webkit-animation: none;
+  -moz-animation: none;
+  -ms-animation: none;
+  animation: none;
+  color: #ffffff;
 }
 
 .result__container {
@@ -195,6 +240,10 @@ input::-webkit-inner-spin-button {
   .result__container {
     width: 70%;
   }
+
+  .connect__metamask {
+    font-size: 22px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -221,12 +270,12 @@ input::-webkit-inner-spin-button {
   }
 
   .loader {
-    margin-top: 90px;
+    margin-top: 100px;
   }
 
   .result__container {
     height: 60px;
-    margin-top: 80px;
+    margin-top: 100px;
     margin-bottom: 40px;
   }
 
@@ -236,6 +285,11 @@ input::-webkit-inner-spin-button {
   }
 
   .usageCounter {
+    font-size: 18px;
+  }
+
+  .connect__metamask {
+    margin-top: 350px;
     font-size: 18px;
   }
 }
@@ -314,5 +368,29 @@ input::-webkit-inner-spin-button {
       0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
       -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.5),
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
+  }
+}
+
+@-webkit-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 30px rgba(232, 76, 61, 0);
+  }
+}
+
+@-moz-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 30px rgba(232, 76, 61, 0);
+  }
+}
+
+@-ms-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 30px rgba(232, 76, 61, 0);
+  }
+}
+
+@keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 30px rgba(232, 76, 61, 0);
   }
 }
